完善create页面与explore页面

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
   <!-- Lenis Smooth Scroll -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lenis@1.2.3/dist/lenis.css">
@@ -6473,7 +6475,7 @@
   position: relative;
   max-width: 1520px;
   margin: 0 auto;
-  padding: 0 40px;
+  padding: 0 3rem;
 }
 
 /* 上方大框 */
@@ -6483,7 +6485,7 @@
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 16px;
   padding: 110px 60px;
-  margin-top: 40px;      /* 整体下移 */
+  margin-top: 3rem;      /* 整体下移 */
   margin-bottom: 20px;
   overflow: hidden;
   width: 100%;           /* 宽度：可调整（100% 表示容器宽度）*/
@@ -6690,7 +6692,7 @@
 @media (max-width: 991px) {
   .footer-main {
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 40px;
+    gap: 3rem;
   }
 
   .footer-brand {
@@ -6698,7 +6700,7 @@
   }
 
   .footer-main-box {
-    padding: 40px 30px;
+    padding: 3rem 30px;
   }
 
   .footer-bottom-box {
@@ -6708,16 +6710,16 @@
 
 @media (max-width: 767px) {
   .footer-section {
-    padding: 40px 0 0;
+    padding: 3rem 0 0;
   }
 
   .footer-container {
-    padding: 0 20px;
+    padding: 0 1.5rem;
   }
 
   .footer-main {
     grid-template-columns: 1fr;
-    gap: 40px;
+    gap: 3rem;
   }
 
   .footer-brand {
@@ -6735,7 +6737,7 @@
 
   .footer-bottom-box {
     padding: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 3rem;
   }
 
   .footer-bottom {
